サブモジュールの移動で色々とおかしくなったので修正

--- a/.gitmodules
+++ b/.gitmodules
@@ -17,3 +17,9 @@
 [submodule "tools/sensniff"]
 	path = tools/sensniff
 	url = https://github.com/g-oikonomou/sensniff.git
+[submodule "apps/tinydtls"]
+	path = apps/tinydtls
+	url = https://github.com/sk2-broken/tinydtls-0.8.2
+[submodule "mqtt_sn"]
+	path = mqtt_sn
+	url = https://github.com/sk2-broken/mqtt-sn-contiki_example
