サブモジュール設定を修正

--- a/.gitmodules
+++ b/.gitmodules
@@ -26,3 +26,4 @@
 [submodule "mqtt_sn_dtls"]
 	path = mqtt_sn_dtls
 	url = https://github.com/sk2-broken/mqtt-sn-contiki_example
+	branch = mqtt-sn-dtls-test
